More changes (much better) to practice flexbox

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     </nav>
     <!-- head -->
     <header>
+      <div>
+        <!-- <img src="images/header.jpg" alt=""> put in image -->
+      </div>
       <h1>Learning Flexbox</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
